Fix button moving on mobile viewport

--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ h1 {
 .wrapper {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
   text-align: center;
   height: 250px;
